--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "clsx": "^2.1.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "motion": "^11.13.3",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
